# servicing_agent

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  seed_db.py  test_e2e.py
backend/agent/: __init__.py  classifier.py  classifier_prompt.py  escalation.py  graph.py  nodes.py  policy_engine.py  state.py  tools.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth.py
backend/app/db/: supabase.py
backend/app/models/: schemas.py
backend/app/routers/: audit.py  chat.py
backend/app/services/: audit.py  llm.py  mock_bank.py
backend/config/: policies.json
frontend/: .env.local.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/chat/components/: AuditDrawer.tsx  HandoffCard.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: MagneticButton.tsx
frontend/src/lib/: motion.ts
frontend/src/styles/: tokens.ts
frontend/src/utils/supabase/: middleware.ts
shared/: README.md
shared/openapi/: spec.yaml
