[project]
name = "servicing-agent-backend"
version = "0.1.0"
description = "End-to-End Card Servicing Agent — FastAPI + LangGraph backend"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
